Revision history for DBIx::Class

        - is_deferable support on relations used by the SQL::Translator
          parser (Anders Nor Berle)
        - Refactored DBIx::Class::Schema::Versioned
        - Syntax errors from resultset components are now reported correctly
        - sqltargs respected correctly in deploy et al.
        - Added support for savepoints, and using them automatically in
          nested transactions if auto_savepoint is set in connect_info.
        - Changed naming scheme for constraints and keys in the sqlt parser;
          names should now be consistent and collision-free.
        - Improve handling of explicit key attr in ResultSet::find (zby)
        - Add warnings for non-unique ResultSet::find queries (zby)

0.08010 2008-03-01 10:30
        - Fix t/94versioning.t so it passes with latest SQL::Translator

0.08009 2008-01-20 13:30
        - Made search_rs smarter about when to preserve the cache to fix
          mm prefetch usage
        - Added Storage::DBI subclass for MSSQL over ODBC. 
        - Added freeze, thaw and dclone methods to Schema so that thawed
          objects will get re-attached to the schema.
        - Moved dbicadmin to JSON::Any wrapped JSON.pm for a sane API
        - introduced DBIx::Class::set_inflated_columns
        - DBIx::Class::Row::copy uses set_inflated_columns

0.08008 2007-11-16 14:30:00
        - Fixed join merging bug (test from Zby)
        - When adding relationships, it will throw an exception if you get the
          foreign and self parts the wrong way round in the condition
        - ResultSetColumn::func() now returns all results if called in list
          context; this makes things like func('DISTINCT') work as expected
        - Many-to-many relationships now warn if the utility methods would 
          clash
        - InflateColumn::DateTime now accepts an extra parameter of timezone
          to set timezone on the DT object (thanks Sergio Salvi)